<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnstLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linLay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay1">

        <Button
            android:id="@+id/btn1"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnMul"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnMul" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay2">

        <Button
            android:id="@+id/btn4"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnSub"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnSub" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay3">

        <Button
            android:id="@+id/btn7"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnAdd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay4">

        <Button
            android:id="@+id/btnPolar"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnPolar" />

        <Button
            android:id="@+id/btn0"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnDot"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnDot" />

        <Button
            android:id="@+id/btnEq"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnEq" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult">

        <Button
            android:id="@+id/btnAc"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:drawablePadding="5dp"
            android:onClick="btnClicked"
            android:text="@string/btnAc" />

        <Button
            android:id="@+id/btnC"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnC" />

        <Button
            android:id="@+id/btnPrcnt"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnPrcnt" />

        <Button
            android:id="@+id/btnDev"
            style="@style/Button_Style"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:onClick="btnClicked"
            android:text="@string/btnDev" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="348dp"
        android:layout_height="150dp"
        android:layout_margin="2dp"
        android:background="#ff6347"
        android:gravity="center_horizontal"
        android:text="@string/txtResult"
        android:textAlignment="viewEnd"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>